--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 10:05:03 2018</p>
+         Last Run: Wed Jul 25 11:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>13</td>
-                        <td>43</td>
+                        <td>24</td>
+                        <td>44</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>0</td>
-                        <td>46</td>
+                        <td>18</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>SE</td>
-                        <td>46</td>
+                        <td>ESE</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
-                        <td>51</td>
+                        <td>53</td>
                         <td>0</td>
-                        <td>13</td>
-                        <td>SE</td>
-                        <td>56</td>
+                        <td>11</td>
+                        <td>ESE</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -74,19 +74,19 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>66</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>32</td>
-                        <td>69</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>39</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>47</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -136,7 +136,7 @@
                  "20",
                  "19",
                  "18",
-                 "15"
+                 "16"
                ]
              },
              {
@@ -149,7 +149,7 @@
                  "20",
                  "19",
                  "18",
-                 "15"
+                 "16"
                ]
              }
            ]
@@ -202,11 +202,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
-                 "0",
+                 "24",
+                 "18",
                  "15",
                  "24",
-                 "32"
+                 "39"
                ]
              },
              {
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
-                 "46",
-                 "51",
+                 "44",
+                 "48",
+                 "53",
                  "58",
-                 "69"
+                 "68"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "40",
-                 "46",
-                 "56",
+                 "41",
+                 "53",
                  "66",
-                 "47"
+                 "64",
+                 "54"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 10:05:03 2018</p>
+         Last Run: Wed Jul 25 11:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -320,7 +320,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>6</td>
                         <td>13</td>
                         <td>N</td>
@@ -456,7 +456,7 @@
                  "37",
                  "34",
                  "32",
-                 "30"
+                 "31"
                ]
              },
              {
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 10:05:03 2018</p>
+         Last Run: Wed Jul 25 11:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -521,7 +521,7 @@
                         <td>Mostly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>23</td>
+                        <td>21</td>
                         <td>44</td>
                         <td>1</td>
                         <td>18</td>
@@ -533,12 +533,12 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>21</td>
+                        <td>19</td>
                         <td>48</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>48</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -663,8 +663,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "18",
-                 "23",
                  "21",
+                 "19",
                  "22"
                ]
              },
@@ -686,7 +686,7 @@
                "data":[
                  "64",
                  "63",
-                 "48",
+                 "47",
                  "48"
                ]
              }
