--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 12:05:03 2018</p>
+         Last Run: Wed Jul 25 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -30,51 +30,51 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>24</td>
+                        <td>35</td>
                         <td>44</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>37</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>18</td>
-                        <td>48</td>
+                        <td>20</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>15</td>
-                        <td>52</td>
+                        <td>20</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>61</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>24</td>
+                        <td>33</td>
                         <td>58</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>60</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -202,10 +202,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "18",
-                 "15",
-                 "24",
+                 "35",
+                 "20",
+                 "20",
+                 "33",
                  "39"
                ]
              },
@@ -215,8 +215,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "44",
-                 "48",
-                 "52",
+                 "49",
+                 "53",
                  "58",
                  "68"
                ]
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "37",
-                 "53",
-                 "61",
-                 "60",
-                 "53"
+                 "50",
+                 "67",
+                 "66",
+                 "55",
+                 "57"
                ]
              }
            ]
@@ -242,12 +242,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 12:05:03 2018</p>
+         Last Run: Wed Jul 25 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -276,7 +277,7 @@
                         <td>4</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>11</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -284,11 +285,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>5</td>
                         <td>10</td>
-                        <td>NNW</td>
-                        <td>15</td>
+                        <td>N</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -296,23 +297,23 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>35</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>NNW</td>
+                        <td>N</td>
                         <td>14</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
-                        <td>31</td>
+                        <td>32</td>
                         <td>7</td>
                         <td>11</td>
-                        <td>N</td>
-                        <td>12</td>
+                        <td>NNE</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -320,11 +321,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>N</td>
-                        <td>18</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -373,7 +374,7 @@
                  "22",
                  "23",
                  "24",
-                 "25",
+                 "24",
                  "25"
                ]
              },
@@ -386,7 +387,7 @@
                  "22",
                  "23",
                  "24",
-                 "25",
+                 "24",
                  "25"
                ]
              }
@@ -453,10 +454,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "44",
-                 "37",
-                 "33",
-                 "31",
-                 "30"
+                 "38",
+                 "35",
+                 "32",
+                 "31"
                ]
              },
              {
@@ -464,11 +465,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "15",
+                 "13",
+                 "16",
                  "14",
-                 "12",
-                 "18"
+                 "11",
+                 "10"
                ]
              }
            ]
@@ -485,7 +486,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 12:05:03 2018</p>
+         Last Run: Wed Jul 25 13:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -506,51 +507,51 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>18</td>
-                        <td>40</td>
+                        <td>42</td>
+                        <td>39</td>
                         <td>2</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>NE</td>
-                        <td>64</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>21</td>
+                        <td>44</td>
                         <td>44</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>63</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>19</td>
-                        <td>48</td>
+                        <td>44</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>47</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>22</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>16</td>
                         <td>N</td>
-                        <td>47</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -598,7 +599,7 @@
                  "25",
                  "24",
                  "22",
-                 "21"
+                 "20"
                ]
              },
              {
@@ -610,7 +611,7 @@
                  "25",
                  "24",
                  "22",
-                 "21"
+                 "20"
                ]
              }
            ]
@@ -662,9 +663,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
-                 "21",
-                 "19",
+                 "42",
+                 "44",
+                 "44",
                  "22"
                ]
              },
@@ -673,10 +674,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "40",
+                 "39",
                  "44",
-                 "48",
-                 "55"
+                 "49",
+                 "56"
                ]
              },
              {
@@ -684,10 +685,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
-                 "63",
-                 "47",
-                 "47"
+                 "50",
+                 "50",
+                 "50",
+                 "53"
                ]
              }
            ]
