--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 13:05:03 2018</p>
+         Last Run: Wed Jul 25 14:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>35</td>
+                        <td>40</td>
                         <td>44</td>
                         <td>2</td>
                         <td>13</td>
@@ -42,39 +42,39 @@
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>49</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>33</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>67</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
                         <td>20</td>
-                        <td>53</td>
+                        <td>20</td>
+                        <td>19</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>66</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>33</td>
-                        <td>58</td>
+                        <td>35</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>39</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -133,8 +133,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "21",
+                 "21",
                  "20",
-                 "19",
                  "18",
                  "16"
                ]
@@ -146,8 +146,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "21",
+                 "21",
                  "20",
-                 "19",
                  "18",
                  "16"
                ]
@@ -202,10 +202,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "35",
-                 "20",
-                 "20",
+                 "40",
                  "33",
+                 "19",
+                 "35",
                  "39"
                ]
              },
@@ -215,10 +215,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "44",
-                 "49",
-                 "53",
-                 "58",
-                 "68"
+                 "47",
+                 "52",
+                 "59",
+                 "69"
                ]
              },
              {
@@ -227,10 +227,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "50",
-                 "67",
-                 "66",
-                 "55",
-                 "57"
+                 "65",
+                 "70",
+                 "61",
+                 "58"
                ]
              }
            ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 13:05:03 2018</p>
+         Last Run: Wed Jul 25 14:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -270,10 +270,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -371,7 +371,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "21",
                  "23",
                  "24",
                  "24",
@@ -384,7 +384,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "21",
                  "23",
                  "24",
                  "24",
@@ -453,7 +453,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
+                 "45",
                  "38",
                  "35",
                  "32",
@@ -486,7 +486,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 13:05:03 2018</p>
+         Last Run: Wed Jul 25 14:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -511,21 +511,21 @@
                         <td>25</td>
                         <td>25</td>
                         <td>42</td>
-                        <td>39</td>
+                        <td>41</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NE</td>
                         <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>44</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NNE</td>
                         <td>50</td>
                      </tr>
@@ -535,7 +535,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>44</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
@@ -546,12 +546,12 @@
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>22</td>
-                        <td>56</td>
+                        <td>24</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>16</td>
                         <td>N</td>
-                        <td>53</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -597,7 +597,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "25",
-                 "24",
+                 "23",
                  "22",
                  "20"
                ]
@@ -609,7 +609,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "25",
-                 "24",
+                 "23",
                  "22",
                  "20"
                ]
@@ -666,7 +666,7 @@
                  "42",
                  "44",
                  "44",
-                 "22"
+                 "24"
                ]
              },
              {
@@ -674,10 +674,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "39",
-                 "44",
-                 "49",
-                 "56"
+                 "41",
+                 "45",
+                 "50",
+                 "57"
                ]
              },
              {
@@ -688,7 +688,7 @@
                  "50",
                  "50",
                  "50",
-                 "53"
+                 "55"
                ]
              }
            ]
